--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,11 @@
       <canvas width="800" height="600" id="imagination"></canvas>
     </div>
 
+    <!-- JS Source -->
     <script src="js/maze.js"></script>
+
+    <!-- Test Suite -->
+    <script src="test/pubtest.min.js"></script>
+    <script src="test/test-maze.js"></script>
   </body>
 </html>
