--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <!-- JS Source -->
     <script src="js/maze.js"></script>
+    <script src="js/main.js"></script>
 
     <!-- Test Suite -->
     <script src="test/pubtest.min.js"></script>
