Adding button to maze

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
     <div class="container">
       <canvas width="600" height="600" id="imagination"></canvas>
+      <div class="bottom">
+        <button id="btn-new-maze" class="nice-btn">New Maze</button>
+      </div>
     </div>
 
     <!-- JS Source -->
